# gpop

./: .gitignore  Cargo.toml  README.md  TODO.md  meson.build  meson_options.txt
.github/workflows/: ci.yml
client/: README.md
client/c/: meson.build
client/c/src/: main.c
client/rust/: Cargo.toml
client/rust/src/: main.rs
client/src/: main.c
daemon/: Cargo.toml  README.md  meson.build
daemon/examples/: ws_client.rs
daemon/src/: error.rs  lib.rs  main.c  main.rs
daemon/src/dbus/: manager.rs  mod.rs  pipeline.rs
daemon/src/event/: mod.rs  tests.rs
daemon/src/gst/: event.rs  event_tests.rs  manager.rs  manager_tests.rs  mod.rs  pipeline.rs  pipeline_tests.rs
daemon/src/pipeline/: manager.rs  manager_tests.rs  mod.rs  parser.rs
daemon/src/websocket/: handler.rs  manager.rs  mod.rs  pipeline.rs  protocol.rs  protocol_tests.rs  server.rs
daemon/tests/: websocket_integration.rs
gpop-rs/: Cargo.toml  README.md
gpop-rs/src/: error.rs  event.rs  main.rs
gpop-rs/src/dbus/: mod.rs  pipeline.rs
gpop-rs/src/pipeline/: manager.rs  mod.rs  parser.rs
gpop-rs/src/websocket/: handler.rs  mod.rs  protocol.rs  server.rs
lib/: meson.build
lib/src/: gpop-client.c  gpop-client.h  gpop-dbus-interface.c  gpop-dbus-interface.h  gpop-main.c  gpop-main.h  gpop-manager.c  gpop-manager.h  gpop-parser.c  gpop-parser.h  gpop-pipeline.c  gpop-pipeline.h  gpop-private.h
scripts/: setup-hooks.sh
web/: Cargo.toml
web/src/: config.rs  error.rs  lib.rs  main.rs
web/src/api/: jobs.rs
web/src/job/: manager.rs  pipeline.rs  types.rs
web/src/storage/: mod.rs
web/src/ws/: client.rs  gpop.rs
