[package]
name = "gpop-client"
version = "1.0.0"
edition = "2021"
authors = ["Stéphane Cerveau"]
license = "LGPL-2.1-or-later"
description = "GStreamer Prince of Parser - WebSocket client"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
